# hobby-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
configured_files/: config.hpp.in
examples/experimental/: calc.hby  func-call.hby
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  ast.hpp
src/ast/include/hobbylang/ast/: ast.hpp
src/hobbyc/: CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp
src/interpreter/include/hobbylang/interpreter/: interpreter.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/parser/include/hobbylang/parser/: parser.hpp
src/wasm/: CMakeLists.txt  wasm.cpp
src/wasm/include/hobbylang/wasm/: wasm.hpp
test/: CMakeLists.txt  ast_tests.cpp  constexpr_tests.cpp  interpreter_tests.cpp  parser_tests.cpp  tests.cpp
